--- a/heidegger_index/templates/_group_by_lemma.html
+++ b/heidegger_index/templates/_group_by_lemma.html
@@ -1,5 +1,5 @@
 {% if group_title %}
-  <h3 class="mt-4 mb-2 text-2xl font-bold dark:text-white">{{ group_title|safe }}</h3>
+  {% include 'components/h3.html' with text=group_title|safe only %}
 {% endif %}
 <ul class="text-xl pl-4 {{ body_text }}">
   {% regroup ref_list by lemma as lemma_groups %}
