Add export button to work and lemma page

--- a/heidegger_index/templates/work_detail.html
+++ b/heidegger_index/templates/work_detail.html
@@ -3,6 +3,7 @@
 {% block head_title %}{{ work.title }}{% endblock head_title %}
 
 {% block body %}
+{% include '_work_export_button.html' %}
 {% include '_home_button.html' %}
 
 {% include 'components/h1.html' with text=work.csl_json.title class="clear-right italic" only %}
