--- a/heidegger_index/templates/lemma_detail.html
+++ b/heidegger_index/templates/lemma_detail.html
@@ -20,7 +20,7 @@
   </p>
   <p class="text-lg text-right">
   Source: <a 
-    href="{ 'https://scaife.perseus.org/reader/' }{{ lemma.urn | safe }}" 
+    href="https://scaife.perseus.org/reader/{{ lemma.urn | safe }}" 
     title="Read full text of {{ lemma.value }} on Perseus"
     target="_blank" rel="noopener noreferrer"
     class="{{ hidden_link_decoration }}"
@@ -61,7 +61,7 @@
 <div>
   <p class="mt-12 text-lg">
   <a 
-  href="{ 'https://scaife.perseus.org/reader/' }{{ lemma.urn | safe }}" 
+  href="https://scaife.perseus.org/reader/{{ lemma.urn | safe }}" 
   title="View {{ lemma.value }} on Perseus"
   target="_blank" rel="noopener noreferrer"
   class="{{ hidden_link_decoration }}"
