Fix typo which caused Perseus link to always be rendered

--- a/heidegger_index/templates/lemma_detail.html
+++ b/heidegger_index/templates/lemma_detail.html
@@ -57,7 +57,7 @@
 {% include '_lemma_list.html' with lemma_list=related title="Related" %}
 {% endif %}
 
-{% if lemma.type and lemma.urn and not lemma.perseux_content %}
+{% if lemma.type and lemma.urn and not lemma.perseus_content %}
 <div>
   <p class="mt-12 text-lg">
   <a 
