--- a/heidegger_index/templates/index.html
+++ b/heidegger_index/templates/index.html
@@ -52,7 +52,7 @@
   {% for work in works %}
   {% if work.reference %}
   <a href="{% url 'index:work-detail' work.slug %}" class="flex gap-4 text-1.5xl transition-colors hover:bg-slate-200 dark:hover:bg-slate-600 rounded-md p-2">
-    <div class="w-16 font-semibold break-words md:w-28 shrink-0 dark:text-white">{{ work.key }}</div>
+    <div class="w-16 font-semibold break-words sm:break-normal sm:w-28 shrink-0 dark:text-white">{{ work.key }}</div>
     <div class="leading-snug {{ body_text }}">{{ work.reference|safe }}</div>
   </a>
   {% endif %}
