--- a/heidegger_index/templates/work_detail.html
+++ b/heidegger_index/templates/work_detail.html
@@ -3,7 +3,7 @@
 {% block head_title %}{{ work.title }}{% endblock head_title %}
 
 {% block body %}
-{% include '_export_button.html' with type="work" %}
+{% if not page_filter %}{% include '_export_button.html' with type="work" %}{% endif %}
 {% include '_home_button.html' %}
 
 {% include 'components/h1.html' with text=work.csl_json.title class="clear-right italic" only %}
