Rewrite `work_detail.html` h1 with complete icon
Change completely index icon color

Display information icon when work is marked as incomplete.

--- a/heidegger_index/templates/components/h1.html
+++ b/heidegger_index/templates/components/h1.html
@@ -1,1 +1,1 @@
-<h1 class="pb-4 text-5xl font-bold dark:text-white{% if class %} {{ class }}{% endif %}">{{ text }}{% if complete %}{% include '../_complete_icon.html' %}{% endif %}</h1>
+<h1 class="pb-4 text-5xl font-bold dark:text-white{% if class %} {{ class }}{% endif %}">{{ text }}</h1>
