--- a/heidegger_index/templates/work_detail.html
+++ b/heidegger_index/templates/work_detail.html
@@ -7,8 +7,13 @@
 {% include '_home_button.html' %}
 
 {% if page_filter %}<a href="{% url 'index:work-detail' work.slug %}">{% endif %}
-{% include 'components/h1.html' with text=work.csl_json.title class="clear-right italic" only %}
-{% if page_filter %}</a>{% endif %}
+<div class="flex">
+  {% if page_filter %}<a href="{% url 'index:work-detail' work.slug %}">{% endif %}
+  {% include 'components/h1.html' with text=work.csl_json.title class="clear-right italic" only %}
+  {% if page_filter %}</a>{% endif %}
+  {% if index_status %}{% include '_status_icon.html' with status=index_status only%}{% endif %}
+</div>  
+
 
 {% if work.parent %}
 <p class="{{ body_text }}">Appears in <a href="{% url 'index:work-detail' work.parent.slug %}" class="{{ hidden_link_decoration }} italic">{{ work.parent.title }}</a></p>
