--- a/heidegger_index/templates/_toc.html
+++ b/heidegger_index/templates/_toc.html
@@ -19,8 +19,8 @@
   {% endfor %}
   {% endif %}
 
-  <button onClick="scrollToWithOffset('bibliography')" class="text-black transition-colors rounded-md dark:text-white hover:bg-slate-200 dark:hover:bg-slate-500">
-    {% include '_bibliography_icon.html' %}
+  <button onClick="scrollToWithOffset('bibliography')" class="flex items-baseline text-black transition-colors rounded-md dark:text-white hover:bg-slate-200 dark:hover:bg-slate-500">
+    <i class="ph-books"></i>
   </button>
 
   </div>
