--- a/heidegger_index/templates/_site_base.html
+++ b/heidegger_index/templates/_site_base.html
@@ -8,10 +8,9 @@
     <title>{% block full_head_title %}{% block head_title %}{% endblock %} – Heidegger index{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <link rel="stylesheet" href="{% static 'css/fonts.css' %}">
+    <link rel="stylesheet" href="{% static 'css/phosphor-icons.css' %}">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900" rel="stylesheet">
-    <script src="https://unpkg.com/smoothscroll-polyfill/dist/smoothscroll.min.js"></script>
-    <script src="https://unpkg.com/smoothscroll-anchor-polyfill"></script>
   </head>
   <body class="font-serif transition-colors bg-slate-50 dark:bg-slate-700">
     {% block container %}
