--- a/heidegger_index/templates/_site_base.html
+++ b/heidegger_index/templates/_site_base.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-{% load static %}
+{% load static i18n %}
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block full_head_title %}{% block head_title %}{% endblock %} – Heidegger index{% endblock %}</title>
+    <title>{% block full_head_title %}{% block head_title %}{% endblock %} – {% translate "Heidegger index" %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <link rel="stylesheet" href="{% static 'css/fonts.css' %}">
     <link rel="stylesheet" href="{% static 'css/phosphor-icons.css' %}">
