--- a/heidegger_index/templates/work_detail.html
+++ b/heidegger_index/templates/work_detail.html
@@ -51,7 +51,7 @@
 
 <div class="action-menu">
   <a class="action-menu__item icon-export" href="{% url "work-md-export" work.slug %}" download>
-    Exporteer als Markdown
+    {% translate "Exporteer als Markdown" %}
   </a>
 </div>
 </div>
