--- a/heidegger_index/templates/_site_base.html
+++ b/heidegger_index/templates/_site_base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block full_head_title %}{% block head_title %}{% endblock %} – {% translate "Heidegger index" %}{% endblock %}</title>
+    <title>{% block full_head_title %}{% block head_title %}{% endblock %} – {% translate "Heidegger-index" %}{% endblock %}</title>
     {% compress css %}
     <link rel="stylesheet" type="text/x-scss" href="{% static 'heidegger_index/_index.scss' %}">
     {% endcompress %}
