Some template tweaks

--- a/heidegger_index/templates/lemma_detail.html
+++ b/heidegger_index/templates/lemma_detail.html
@@ -23,7 +23,7 @@
 <blockquote>
   {{ lemma.perseus_content }} 
   ({% translate "Bron" %}: 
-  <a href="https://scaife.perseus.org/reader/{{ lemma.urn | safe }}" title="Read full text of {{ lemma.value }} on Perseus" target="_blank" rel="noopener noreferrer"><cite>Perseus Digital Library</cite></a>)
+  <a href="https://scaife.perseus.org/reader/{{ lemma.urn | safe }}" title="Read full text of {{ lemma.value }} on Perseus" target="_blank"><cite>Perseus Digital Library</cite></a>)
 </blockquote>
 {% endif %}
 
