--- a/heidegger_index/templates/lemma_list.html
+++ b/heidegger_index/templates/lemma_list.html
@@ -7,9 +7,7 @@
 
 {% block body %}
 
-<a href="/" class="menu-button">
-  <i class="icon-house"></i>
-</a>
+<a href="/" class="menu-button icon-house"></a>
 
 {% include 'components/_navigation.html' %}
 
