--- a/heidegger_index/templates/lemma_detail.html
+++ b/heidegger_index/templates/lemma_detail.html
@@ -9,7 +9,7 @@
 
 <div class="lemma-detail">
 
-<h1>{{ lemma.display }}</h1>
+<h1 class="lemma-detail__title {{ lemma.icon }}">{{ lemma.display }}</h1>
 
 {% if lemma.type == "w" and lemma.author %}
 <div class="lemma-detail__author">
