--- a/heidegger_index/static/heidegger_index/_lemma.scss
+++ b/heidegger_index/static/heidegger_index/_lemma.scss
@@ -8,7 +8,12 @@
   padding: 3rem 0;
 
   &__title {
+    flex-direction: column;
     align-items: flex-start;
+
+    @include breakpoint(sm) {
+      flex-direction: row;
+    }
   }
 
   &__author {
