--- a/heidegger_index/static/heidegger_index/_work.scss
+++ b/heidegger_index/static/heidegger_index/_work.scss
@@ -6,8 +6,13 @@
   padding: 3rem 0;
 
   &__title {
-    align-items: start;
     font-style: italic;
+    flex-direction: column;
+    align-items: flex-start;
+
+    @include breakpoint(sm) {
+      flex-direction: row;
+    }
   }
 
   &__parent {
