--- a/heidegger_index/templates/lemma_detail.html
+++ b/heidegger_index/templates/lemma_detail.html
@@ -80,6 +80,15 @@
     </span>
   </a>
   {% endif %}
+  {% if lemma.zeno %}
+    <a href="http://zeno.org/nid/{{ lemma.zeno }}" target="_blank" class="action-menu__item icon-book-open">
+      {% if lemma.type == 'p' %}
+        {% blocktrans %}Lees werken van {{ author_short }} op <cite>Zeno.org</cite>{% endblocktrans %}
+      {% else %}
+        {% blocktrans %}Lees de volledige tekst op <cite>Zeno.org</cite>{% endblocktrans %}
+      {% endif %}
+    </a>
+  {% endif %}
 </div>
 
 
