--- a/heidegger_index/static/heidegger_index/_index.scss
+++ b/heidegger_index/static/heidegger_index/_index.scss
@@ -7,6 +7,7 @@ $theme-color: #f72b07;
 @import "./bibliography";
 @import "./group-by";
 @import "./intro";
+@import "./language";
 @import "./lemma";
 @import "./navigation";
 @import "./work";
