Add icon indentation

--- a/heidegger_index/static/heidegger_index/_index.scss
+++ b/heidegger_index/static/heidegger_index/_index.scss
@@ -2,6 +2,7 @@ $theme-color: #f72b07;
 
 @import "theme";
 
+@import "./mixins";
 @import "./action-menu";
 @import "./bibliography";
 @import "./group-by";
