--- a/heidegger_index/static/heidegger_index/_work.scss
+++ b/heidegger_index/static/heidegger_index/_work.scss
@@ -7,12 +7,7 @@
 
   &__title {
     font-style: italic;
-    flex-direction: column;
-    align-items: flex-start;
-
-    @include breakpoint(sm) {
-      flex-direction: row;
-    }
+    @include icon-indent;
   }
 
   &__parent {
